Login authorisation, registration and index page working perfect

--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -10,8 +10,8 @@
 {% block body %}
 <div class="container-fluid songs-container">
     <div class="row">
-            Hello: {% user.userid %}
-            Current: {% current %}
+            Hello: {{ user.username }}
+            Current: {{ current }}
     </div>
 </div>
 {% endblock %}
