--- a/review_project/ratings/templates/ratings/login.html
+++ b/review_project/ratings/templates/ratings/login.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </form>
-
+                    <p><a href="{% url 'ratings:register' %}">New User?</a></p>
                 </div>
             </div>
         </div>
