Major changes made in login system, use this only, for all FUTURE purposes. Register and login happens for user

--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -10,7 +10,7 @@
 {% block body %}
 <div class="container-fluid songs-container">
     <div class="row">
-            Hello: {{ user.username }}
+            Hello: {{ user.profile.userid }}
             Current: {{ current }}
     </div>
 </div>
