--- a/review_project/ratings/templates/ratings/login.html
+++ b/review_project/ratings/templates/ratings/login.html
@@ -11,25 +11,20 @@
 
     <div class="row">
 
-        <div class="col-sm-12 col-md-7">
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <h3>Login</h3>
-                    {% if error_message %}
-                        <p><strong>{{ error_message }}</strong></p>
-                    {% endif %}
-                    <form  class="form-horizontal" action="" method="post" enctype="multipart/form-data">
-                        {% csrf_token %}
-                        {% include 'ratings/genericForm.html' %}
-                            <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Submit</button>
-                            </div>
-                        </div>
-                    </form>
-
+        <div class="col-sm-12 col-md-4 center-small">
+            <h3 class="text-center">{{ type }}</h3>
+            {% if error_message %}
+                <p><strong>{{ error_message }}</strong></p>
+            {% endif %}
+            <form class="card" action="" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% include 'ratings/genericForm.html' %}
+                    <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </div>
                 </div>
-            </div>
+            </form>
         </div>
 
     </div>
