Added sudo method, but to add superuserloginfunction decorator on sudo class or get/post methods

--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -28,6 +28,11 @@
         <div class="row">
             Current Rated: {{ current_rated }}
         </div>
+
+        {% if error_message %}
+                <p><strong>{{ error_message }}</strong></p>
+        {% endif %}
+        
         {% if form %}
         <form  class="form-horizontal" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
