--- a/review_project/ratings/templates/ratings/base.html
+++ b/review_project/ratings/templates/ratings/base.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy"> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="{% static 'ratings/style.css' %}"  >
     <script src="{% static 'ratings/main.js' %}"></script>
 
