--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -10,24 +10,36 @@
 <div class="container center-large card">
     <div class="padding-15">
         <div class="row">
-            Userid: {{ user.userid }}
+            <div class="col-sm-6">
+                <span class="font-lora">Username:</span> {{ user.name }}
+            </div>
         </div>
         <div class="row">
-            Username: {{ user.name }}
+            <div class="col-sm-6">
+                <span class="font-lora">User Id:</span> {{ user.userid }}
+            </div>
         </div>
         <div class="row">
-            About: {{ user.about }}
+            <div class="col-sm-12">
+                <span class="font-lora">About:</span> {{ user.about }}
+            </div>
         </div>
         <div class="row">
-            Works:{{ works }}
-            {% for work in works %}
-                <div class="col-sm-10">{{ work }}</div>
-            {% endfor %}
+                <div class="col-sm-12">
+                    <span class="font-lora">Rating:</span> {{ current_rated }}
+                </div>
+            </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <span class="font-lora">Works:</span>
+                <ul>
+                    {% for work in works %}
+                        <li class="card work-card">{{ work }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
         </div>
 
-        <div class="row">
-            Current Rated: {{ current_rated }}
-        </div>
         {% if form %}
         <form  class="form-horizontal" action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
