--- a/review_project/ratings/templates/ratings/login.html
+++ b/review_project/ratings/templates/ratings/login.html
@@ -11,7 +11,7 @@
 
     <div class="row">
 
-        <div class="col-sm-12 col-md-4 center-small">
+        <div class="col-sm-12 col-md-5 center-small login-form">
             <h3 class="text-center">{{ type }}</h3>
             {% if error_message %}
                 <p><strong>{{ error_message }}</strong></p>
