--- a/review_project/ratings/templates/ratings/user_list.html
+++ b/review_project/ratings/templates/ratings/user_list.html
@@ -5,7 +5,7 @@
     <h2>Leaderboard: (For now it's unordered, order them later by CRPA and SRPA .) </h2>
     <ul>
         {% for user in object_list %}
-            <li> <strong>{{ user.name }}</strong>  (Name) and <strong>{{user.about}}</strong> (about) </li> 
+            <li>  <strong>{{ user.userid }}</strong>  .  Recent Rating is: <strong>{{ user.current_rating }}</strong>   </li> 
         {% endfor %}
     </ul>
 {% endblock %}
