--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -10,34 +10,41 @@
 <div class="container center-large card">
     <div class="padding-15">
         <div class="row">
-            <div class="col-sm-6">
-                <span class="font-lora">Username:</span> {{ user.name }}
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Username:</span> 
+                <div class="col-sm-9">{{ user.name }}</div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6">
-                <span class="font-lora">User Id:</span> {{ user.userid }}
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">User Id:</span> 
+                <div class="col-sm-9">{{ user.userid }}</div>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-12">
-                <span class="font-lora">About:</span> {{ user.about }}
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">About:</span>
+                <div class="col-sm-9">{{ user.about }}</div>
             </div>
         </div>
         <div class="row">
-                <div class="col-sm-12">
-                    <span class="font-lora">Recent Rating:</span> {{ user.current_rating }}
-                </div>
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Recent Rating:</span>
+                <div class="col-sm-9">{{ user.current_rating }}</div>
             </div>
+        </div>
+        {% if not current %}
         <div class="row">
-                <div class="col-sm-12">
-                    <span class="font-lora">Current Rating by You:</span> {{ current_rated }}
-                </div>
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Current Rating by You:</span>
+                <div class="col-sm-9">{{ current_rated }}</div>
             </div>
+        </div>
+        {% endif %}
         <div class="row">
-            <div class="col-sm-12">
-                <span class="font-lora">Works:</span>
-                <ul>
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Works:</span>
+                <ul class="col-sm-9">
                     {% for work in works %}
                         <li class="card work-card">{{ work }}</li>
                     {% endfor %}
