--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -1,4 +1,5 @@
 {% extends 'ratings/base.html' %}
+{% load staticfiles %}
 {% block title %}User Details{% endblock %}
 
 {% block navbar_items %}
@@ -8,6 +9,7 @@
 
 {% block body %}
 <div class="container center-large card">
+    <a href="#" class="editable"><img src="{% static 'ratings/images/edit.png' %}" width="20" height="20"></a>
     <div class="padding-15">
         <div class="row">
             <div class="col-sm-12 row">
