user update form, view and template done. Rendering issues with work to be solved

--- a/review_project/ratings/templates/ratings/base.html
+++ b/review_project/ratings/templates/ratings/base.html
@@ -15,7 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="{% static 'ratings/style.css' %}"  >
-    <script src="{% static 'ratings/main.js' %}"></script>
+    <script src="{% static 'ratings/js/main.js' %}"></script>
 
     <!-- <script src="{% static 'ratings/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'ratings/js/bootstrap.min.js' %}"></script>
