--- a/review_project/ratings/templates/ratings/genericForm.html
+++ b/review_project/ratings/templates/ratings/genericForm.html
@@ -1,7 +1,7 @@
 {% for field in form %}
 
     <div class="form-group row">
-        <label class="col-sm-4 col-form-label">{{ field.label_tag }}</label>
+        <label class="col-sm-4 col-form-label font-lora">{{ field.label_tag }}</label>
         <div class="col-sm-8">{{ field }}</div>
     </div>
 
