--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -59,11 +59,13 @@
         <div class="row">
             <div class="col-sm-12 row">
                 <span class="font-lora col-sm-3">Works:</span>
-                <ul class="col-sm-9">
-                    {% for work in works %}
-                        <li class="card work-card">{{ work }}</li>
-                    {% endfor %}
-                </ul>
+                <div class="col-sm-9 ">
+                    <div class="card work-row">
+                        {% for work in works %}
+                            <div class=" card work-card">{{ work }}</div>
+                        {% endfor %}
+                    </div>
+                </div>
             </div>
         </div>
 
