Proper merging of login system and our previous work

--- a/review_project/ratings/templates/ratings/genericForm.html
+++ b/review_project/ratings/templates/ratings/genericForm.html
@@ -1,6 +1,9 @@
 {% for field in form %}
 
     <div class="form-group row">
+        <div class="col-sm-offset-2 col-sm-10">
+            <span class="text-danger small">{{ field.errors }}</span>
+        </div>
         <label class="col-sm-4 col-form-label font-lora">{{ field.label_tag }}</label>
         <div class="col-sm-8">{{ field }}</div>
     </div>
