--- a/review_project/ratings/templates/ratings/profile_list.html
+++ b/review_project/ratings/templates/ratings/profile_list.html
@@ -2,10 +2,12 @@
 {% block title %}Leaderboard{% endblock %}
 
 {% block body %}
-    <h2>Leaderboard: (For now it's unordered, order them later by CRPA and SRPA .) </h2>
+<div class="container center-small card">
+    <h2 class="text-center">Leaderboard</h2>
     <ul>
         {% for user in object_list %}
-            <li> <a href="{{ user.get_absolute_url }}"> <strong>{{ user.userid }}</strong> </a>  .  Recent Rating is: <strong>{{ user.current_rating }}</strong>   </li> 
+            <li> <a href="{{ user.get_absolute_url }}"> <strong>{{ user.userid }}</strong></a>.  Recent Rating is: <strong>{{ user.current_rating }}</strong>   </li> 
         {% endfor %}
     </ul>
+</div>
 {% endblock %}
