UI and ratings form updated. Login branch merged. Some work in userdetailview still left

--- a/review_project/ratings/templates/ratings/base.html
+++ b/review_project/ratings/templates/ratings/base.html
@@ -65,7 +65,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12">
-                <span class="font-lora">@</span>{{ user.userid }}
+                <span class="font-lora"></span>{{ user.userid }}
             </div>
         </div>
     </div>
