--- a/review_project/ratings/templates/ratings/profile_list.html
+++ b/review_project/ratings/templates/ratings/profile_list.html
@@ -2,16 +2,27 @@
 {% block title %}Leaderboard{% endblock %}
 
 {% block body %}
-<div class="container center-small card">
-    <h2 class="text-center">Leaderboard</h2>
-    <table>
-        <tr>
+<div class="container center-large card">
+    <h2 class="text-center">Leaderboard</h2><br><hr>
+    <table class="table">
+        <thead class="thead-light">
+            <tr>
+                <th scope="col">User Id</th>
+                <th scope="col">Rating</th>
+                <th scope="col">Latest Work</th>
+            </tr>
+        </thead>
+        <tbody>
             {% for user in object_list %}
-                <td> <a href="{{ user.get_absolute_url }}"> <strong>{{ user.userid }}</strong></a></td>
-                <td> <strong>{{ user.current_rating }}</strong> </td>
-                <td> {{ user.get_latest_work }}</td> 
+            <tr>
+                <th scope="col"> <a href="{{ user.get_absolute_url }}"> <strong>{{ user.userid }}</strong></a></th>
+                <td > <strong>{{ user.current_rating }}</strong> </td>
+                <td > {% if user.get_latest_work %} 
+                    {{ user.get_latest_work }}
+                    {% else %} {% endif %}</td> 
+            </tr>            
             {% endfor %}
-        </tr>
+        </tbody>
     </table>
 </div>
 {% endblock %}
