Ratings table for current user done.

--- a/review_project/ratings/templates/ratings/profile_list.html
+++ b/review_project/ratings/templates/ratings/profile_list.html
@@ -7,9 +7,9 @@
     <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col">User Id</th>
-                <th scope="col">Rating</th>
-                <th scope="col">Latest Work</th>
+                <th scope="col" class="col-sm-3">User Id</th>
+                <th scope="col" class="col-sm-2">Rating</th>
+                <th scope="col" class="col-sm-7">Latest Work</th>
             </tr>
         </thead>
         <tbody>
