--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -32,13 +32,22 @@
                 <div class="col-sm-9">{{ user.about }}</div>
             </div>
         </div>
+        {% if rater.canSee %}        
         <div class="row">
             <div class="col-sm-12 row">
                 <span class="font-lora col-sm-3">Current Rating:</span>
                 <div class="col-sm-9">{{ user.current_rating }}</div>
             </div>
         </div>
-        
+        {% else %}
+        <div class="row">
+            <div class="col-sm-12 row">
+                <span class="font-lora col-sm-3">Current Rating:</span>
+                <div class="col-sm-9"> You have not yet rated everyone, so you cannot see other's ratings.</div>
+            </div>
+        </div>
+        {% endif %}
+
         {% if ratingFound %}
             <div class="row">
                 <div class="col-sm-12 row">
