--- a/review_project/ratings/templates/ratings/profile_list.html
+++ b/review_project/ratings/templates/ratings/profile_list.html
@@ -15,8 +15,12 @@
         <tbody>
             {% for user in object_list %}
             <tr>
-                <th scope="col"> <a href="{{ user.get_absolute_url }}"> 
+                <th scope="col"> <a href="{{ user.get_absolute_url }}">
+                    {% if ratercansee %} 
                     <strong>{{ user.userid }}</strong>
+                    {% else %}
+                    <strong>You have not rated everyone yet. You cannot see the ratings.</strong>
+                    {% endif %}                    
                 </a></th>
                 <td > <strong>{{ user.current_rating }}</strong> </td>
                 <td > {% if user.get_latest_work %} 
