Decryption for Cumulative Rating Done

--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -32,6 +32,7 @@
                 <div class="col-sm-9">{{ user.about }}</div>
             </div>
         </div>
+        
         {% if rater.canSee %}
         <div class="row">
             <div class="col-sm-12 row">
@@ -55,10 +56,10 @@
                     <div class="col-sm-9">{{ current_rated }}</div>
                 </div>
             </div>
-          <!--  <div class="row">
+          <!-- <div class="row">
                 <div class="col-sm-12 row">
                     <span class="font-lora col-sm-3">All Reviews</span>
-                    <div class="col-sm-9">{{reviews}}</div>
+                    <div class="col-sm-9">{{together}}</div>
                 </div>
             </div>-->
 
