Login and Logout buttons appear as they should.

--- a/review_project/ratings/templates/ratings/base.html
+++ b/review_project/ratings/templates/ratings/base.html
@@ -13,7 +13,7 @@
     <!-- <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Satisfy"> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Lora|Slabo+27px" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'ratings/style.css' %}"  >
     <script src="{% static 'ratings/js/main.js' %}"></script>
 
@@ -29,7 +29,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
@@ -40,15 +40,19 @@
                 </li>
             </ul>
             <ul class="navbar-nav">
+                {% if not logged_in %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'ratings:login' %}">Login</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'ratings:register' %}">Register</a>
                 </li>
+                {% endif%}
+                {% if logged_in %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'ratings:logout' %}">Logout</a>
                 </li>
+                {% endif %}
             </ul>
             <!-- <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
