--- a/review_project/ratings/templates/registration/login.html
+++ b/review_project/ratings/templates/registration/login.html
@@ -1,9 +1,9 @@
 {% extends 'ratings/base.html' %}
 {% block title %}User Details{% endblock %}
 
-{% block navbar_items %}
+<!--{% block navbar_items %}
 
-{% endblock %}
+{% endblock %}-->
 
 {% block body %}
 
