--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -174,7 +174,14 @@
             <input type="checkbox" name="working[]" value='{{each}}'>{{each}}
             {%endfor%}-->
             {%for each in works_together%}
-            <input type="checkbox" name="working[]" value='{{each.work}}'>{{each.start}}
+            <div class="row" style="margin:10px 0px 15px 0px; border-bottom: 1px solid rgb(212, 212, 212)">
+                <div class="col-sm-9" >
+                    {{each.start}}
+                </div>
+                <div class="col-sm-3" style="margin-top:8px">
+                    <input type="checkbox" name="working[]" value='{{each.work}}'>
+                </div>               
+            </div>
             {%endfor%}
             <div class="form-group row">
                 <div class="col-sm-offset-2">
