--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -169,7 +169,9 @@
             {% csrf_token %}
             {% include 'ratings/genericForm.html' with form=workform %}   <!---This is for the add work part--->
             <!--manually create check box form here-->
+            {% if works_together%}
             Check the works you want to delete:
+            {% endif %}
             <!--{%for each in works%}
             <input type="checkbox" name="working[]" value='{{each}}'>{{each}}
             {%endfor%}-->
@@ -180,7 +182,7 @@
                 </div>
                 <div class="col-sm-3" style="margin-top:8px">
                     <input type="checkbox" name="working[]" value='{{each.work}}'>
-                </div>               
+                </div>
             </div>
             {%endfor%}
             <div class="form-group row">
