--- a/review_project/ratings/templates/ratings/user.html
+++ b/review_project/ratings/templates/ratings/user.html
@@ -106,11 +106,16 @@
                     </div>
                     <label class="col-sm-3 col-form-label font-lora">{{ field.label_tag }}</label>
                     {% if field.label == "Rating" %}
-                    {% for radio in field %}
-                    <div class="col-sm-offset-1 col-sm-1">
-                      {{radio}}
-                    </div>
-                    {% endfor %}
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-sm-1"></div>
+                            {% for radio in field %}
+                            <div class="col-sm-1">
+                            {{radio}}
+                            </div>
+                            {% endfor %}
+                        </div>
+                    </div>                                    
                     {% else %}
                     <div class="col-sm-3">{{ field }}</div>
                     {% endif %}
