--- a/review_project/ratings/templates/ratings/profile_list.html
+++ b/review_project/ratings/templates/ratings/profile_list.html
@@ -7,9 +7,12 @@
     <table class="table">
         <thead class="thead-light">
             <tr>
-                <th scope="col" class="col-sm-3">User Id</th>
+                <!--<th scope="col" class="col-sm-3">User Id</th>
                 <th scope="col" class="col-sm-2">Rating</th>
-                <th scope="col" class="col-sm-7">Latest Work</th>
+                <th scope="col" class="col-sm-7">Latest Work</th>-->
+                <th scope="col" style="width: 30%">User Id</th>
+                <th scope="col" style="width: 20%">Rating</th>
+                <th scope="col" style="width: 70%"><center>Latest Work</center></th>
             </tr>
         </thead>
         <tbody>
